# AuthzTrace

./: .gitignore  CHANGELOG.md  LICENSE  README.md  action.yml  pyproject.toml
.github/workflows/: authztrace-example.yml  ci.yml  release.yml
authztrace/: __init__.py  cli.py  config.py  engine.py  matrix.py  models.py  openapi.py  report.py  scaffold.py  templating.py
authztrace/inference/: __init__.py  compiler.py  discovery.py  fastapi.py  models.py  openapi.py  review.py
docs/: AUTHENTICATION.md  CORPUS.md  SOURCE_INFERENCE.md
examples/: authztrace-login.yaml  authztrace-nested.yaml  authztrace.yaml
examples/vulnerable-api/: app.py
tests/: test_cli.py  test_config.py  test_engine.py  test_inference.py  test_matrix.py  test_openapi.py  test_report.py
