[project]
name = "authztrace"
version = "0.1.0"
description = "Authorization contract testing for IDOR/BOLA — prove user A can't touch user B's objects, in CI."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Mohamed Taha Slimani (@Asttr0)" }]
keywords = ["security", "idor", "bola", "api-security", "authorization", "owasp", "appsec", "ci", "dast"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "requests>=2.28",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[project.urls]
Homepage = "https://github.com/Asttr0/authztrace"
Issues = "https://github.com/Asttr0/authztrace/issues"

[project.scripts]
authztrace = "authztrace.cli:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["authztrace*"]
