[project]
name = "authztrace"
version = "0.3.0"
description = "Authorization contract testing for IDOR/BOLA — prove user A can't touch user B's objects, in CI."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Mohamed Taha Slimani (@Asttr0)" }]
keywords = ["security", "idor", "bola", "api-security", "authorization", "owasp", "appsec", "ci", "dast"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "requests>=2.28",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "pytest>=8",
    "ruff>=0.8",
]

[project.urls]
Homepage = "https://github.com/Asttr0/authztrace"
Issues = "https://github.com/Asttr0/authztrace/issues"

[project.scripts]
authztrace = "authztrace.cli:main"

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["authztrace*"]

[tool.setuptools.package-data]
authztrace = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
